[package]
name = "van"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
dirs = "5.0.1"
lazy_static = "1.4.0"
regex = "1.6.0"
reqwest = { version = "0.11.11", features = ["blocking", "json"] }
serde = { version = "1.0.139", features = ["derive"] }
serde_json = "1.0.82"
configparser = { version = "3.0.0", features = ["indexmap"] }
